--- a/src/content/blog/bundesliga-facepack-v1-pes-2021-by-halobaim.mdx
+++ b/src/content/blog/bundesliga-facepack-v1-pes-2021-by-halobaim.mdx
@@ -10,7 +10,7 @@ tags:
   - PES 2021
   - Budesliga
   - Football Life
-description: post description
+description: This is Bundesliga facepack version 1 created by Halobaim for eFootball Pro Evolution Soccer 2021, and also PES 2020
 type: Blog post
 lastmod: null
 isFeatured: null
