--- a/src/content/blog/new-realistic-gameplay-football-life-24-v2.9-by-football4life.mdx
+++ b/src/content/blog/new-realistic-gameplay-football-life-24-v2.9-by-football4life.mdx
@@ -10,7 +10,7 @@ tags:
   - mod
   - Football Life 24
   - downloads
-description: post description
+description: Gameplay mod V2.9 update for Football Life 24 by Football4Life. This gameplay can provide a lot of enjoyment to everyone
 type: Blog post
 lastmod: null
 isFeatured: null
@@ -44,6 +44,7 @@ import LinkButton from "@components/LinkButton.astro";
   ## New gameplay mod V2.9 update for Football Life 24 by Football4Life. This gameplay can provide a lot of enjoyment to everyone
 
 {" "}
+
 <hr />
 
 - This time I bring you something completely different. This time I'm trying to make a football simulation, where I did my best to replicate the real-life matches (the speed of the game, the possibility for players to make a nice looking action, the possibility for players to make mistakes, harder free kicks...).
@@ -64,6 +65,7 @@ Version 2.9 Improvements:
 ### Preview
 
 {" "}
+
 <div class="aspect-video relative">
   <iframe
     class="absolute w-full h-full"
@@ -91,6 +93,7 @@ And to all other users who helped Football4Life with their well-intentioned comm
 ### Downloads
 
 {" "}
+
 <div className="flex flex-wrap gap-2">
   <LinkButton
     targetNew={true}
