--- a/src/content/blog/asian-cup-qatar-2023-pes-2021-sider-made-by-omaraladdin.mdx
+++ b/src/content/blog/asian-cup-qatar-2023-pes-2021-sider-made-by-omaraladdin.mdx
@@ -6,11 +6,12 @@ postSlug: asian-cup-qatar-2023-pes-2021-sider-omaraladdin
 featured: false
 draft: false
 tags:
+  - Asian Cup
   - Asian Cup 23
   - PES 2021
   - scoreboard
   - Sider
-  - Asian Cup
+  - downloads
 description: OmarAladdin has just released a fantastic Asian Cup Qatar 2023 scoreboard.
 type: Blog post
 lastmod: 2024-02-10T07:46:09.090Z
@@ -45,17 +46,21 @@ import LinkButton from "@components/LinkButton.astro";
   ## OmarAladdin has just released a fantastic Asian Cup Qatar 2023 scoreboard.
 
 {" "}
+
 <hr />
 
 ### Previews
 
 {" "}
+
 <Figure title="Team Result Stats" src="/assets/20240209223852_1.jpeg" />
 
 {" "}
+
 <Figure title="Main Scoreboard" src="/assets/20240209224627_1.jpeg" />
 
 {" "}
+
 <Figure title="Pause Menu" src="/assets/20240209224644_1.jpeg" />
 
 ### How to Install
@@ -76,6 +81,7 @@ import LinkButton from "@components/LinkButton.astro";
 ### Downloads
 
 {" "}
+
 <div className="flex flex-wrap gap-2">
   <LinkButton
     targetNew={true}
