--- a/src/content/blog/bundesliga-facepack-v1-pes-2021-by-halobaim.mdx
+++ b/src/content/blog/bundesliga-facepack-v1-pes-2021-by-halobaim.mdx
@@ -6,10 +6,11 @@ postSlug: bundesliga-facepack-v1-pes-2021-halobaim
 featured: false
 draft: false
 tags:
-  - Facepack
-  - PES 2021
   - Budesliga
+  - Facepack
   - Football Life
+  - PES 2021
+  - downloads
 description: This is Bundesliga facepack version 1 created by Halobaim for eFootball Pro Evolution Soccer 2021, and also PES 2020
 type: Blog post
 lastmod: null
