--- a/src/content/blog/premier-league-facepack-v1--pes-2021-by-halobaim.mdx
+++ b/src/content/blog/premier-league-facepack-v1--pes-2021-by-halobaim.mdx
@@ -7,9 +7,10 @@ featured: false
 draft: false
 tags:
   - Facepack
+  - Football Life
   - PES 2021
   - Premier League
-  - Football Life
+  - downloads
 description: Proudly present Premier League facepack version 1 created by Halobaim for eFootball Pro Evolution Soccer 2021, and also PES 2020
 type: Blog post
 lastmod: 2024-02-09T06:05:59.740Z
