--- a/src/content/blog/premier-league-facepak-v2--pes-2021-by-halobaim.mdx
+++ b/src/content/blog/premier-league-facepak-v2--pes-2021-by-halobaim.mdx
@@ -46,6 +46,7 @@ import LinkButton from "@components/LinkButton.astro";
 {" "}
 
 {" "}
+
 <hr />
 
 This package contains six player faces from Premier League clubs :
@@ -70,11 +71,6 @@ Extract and copy the folder with ID (numbers) along the path: <br />
 
 Open sider.ini, and add the following line (if not already done)
 
-{" "}
-
-{" "}
-
-{" "}
 <pre>
   <code>
     <span class="text-white">cpk.root = ".\livecpk\faces"</span>
@@ -90,11 +86,6 @@ Use the "DpFileList Generator" tool to add the created CPK file into your game
 
 ### Install Facepack Video tutorial
 
-{" "}
-
-{" "}
-
-{" "}
 <div class="aspect-video relative">
   <iframe
     class="absolute w-full h-full"
@@ -113,15 +104,13 @@ Use the "DpFileList Generator" tool to add the created CPK file into your game
 {" "}
 
 {" "}
+
 <script
   async
   src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3982586798741178"
   crossorigin="anonymous"
 ></script>
 
-{" "}
-
-{" "}
 <ins
   class="adsbygoogle"
   style="display:block; text-align:center;"
@@ -135,11 +124,6 @@ Use the "DpFileList Generator" tool to add the created CPK file into your game
 
 ### Download
 
-{" "}
-
-{" "}
-
-{" "}
 <div className="flex flex-wrap gap-2">
   <LinkButton
     targetNew={true}
@@ -172,7 +156,8 @@ Use the "DpFileList Generator" tool to add the created CPK file into your game
   </LinkButton>
 </div>
 **Donating to Halobaim is one way to support his works:** <br />
-[PAYPAL](http://paypal.me/halobaim) or [BUY HIM A COFFEE](http://buymeacoffee.com/halobaim)
+[PAYPAL](http://paypal.me/halobaim) or [BUY HIM A
+COFFEE](http://buymeacoffee.com/halobaim)
 
 ### Credits
 
