--- a/src/content/blog/premier-league-facepak-v2--pes-2021-by-halobaim.mdx
+++ b/src/content/blog/premier-league-facepak-v2--pes-2021-by-halobaim.mdx
@@ -41,22 +41,16 @@ import LinkButton from "@components/LinkButton.astro";
 {/* CONTENT */}
 
 <div class="col-span-8 md:col-start-2 md:col-span-6 lg:col-start-2 lg:col-span-4 [&>h2]:!mt-0">
-  ## Another Premier League facepack, version 2 created by Halobaim for eFootball Pro Evolution Soccer 2021, and also PES 2020
-
-{" "}
-
-{" "}
-
-<hr />
-
-This package contains six player faces from Premier League clubs :
-
-- M. Burstow (Chelsea)
-- F. Buonanotte (Brighton)
-- O. Kellyman (Aston Villa)
-- E. Balcombe (Brentford)
-- O. Richards (Nottingham)
-- E. Anderson (Newcastle)
+  ## Another Premier League facepack version 2 created by Halobaim for eFootball Pro Evolution Soccer 2021, and also PES 2020
+  <hr />
+  
+  This package contains six player faces from Premier League clubs :
+  - M. Burstow (Chelsea)
+  - F. Buonanotte (Brighton)
+  - O. Kellyman (Aston Villa)
+  - E. Balcombe (Brentford)
+  - O. Richards (Nottingham)
+  - E. Anderson (Newcastle)
 
 **NOTE: Always watch your ID's. All on real ID (Evo-web Patch).**
 
@@ -70,6 +64,8 @@ Extract and copy the folder with ID (numbers) along the path: <br />
 `... \ livecpk\Faces\Asset\model \character\face\real`
 
 Open sider.ini, and add the following line (if not already done)
+
+{" "}
 
 <pre>
   <code>
@@ -86,6 +82,8 @@ Use the "DpFileList Generator" tool to add the created CPK file into your game
 
 ### Install Facepack Video tutorial
 
+{" "}
+
 <div class="aspect-video relative">
   <iframe
     class="absolute w-full h-full"
@@ -100,10 +98,6 @@ Use the "DpFileList Generator" tool to add the created CPK file into your game
 </div>
 
 {/* ad unit article */}
-
-{" "}
-
-{" "}
 
 <script
   async
@@ -123,6 +117,8 @@ Use the "DpFileList Generator" tool to add the created CPK file into your game
 {/* ad unit article */}
 
 ### Download
+
+{" "}
 
 <div className="flex flex-wrap gap-2">
   <LinkButton
@@ -163,8 +159,8 @@ COFFEE](http://buymeacoffee.com/halobaim)
 
 - Halobaim
 - And he want to say thank you to :
-- @MJTS-140914 for amazing face/hair modifier tools.
-- And very big thank you to Mr. @Fleishman for the amazing tutorial and always helping me on making this faces.
+  - @MJTS-140914 for amazing face/hair modifier tools.
+  - And very big thank you to Mr. @Fleishman for the amazing tutorial and always helping me on making this faces.
 - Fikhai Sports for video tutorial
   </div>
 {/* CONTENT */}
