--- a/src/content/blog/premier-league-facepak-v2--pes-2021-by-halobaim.mdx
+++ b/src/content/blog/premier-league-facepak-v2--pes-2021-by-halobaim.mdx
@@ -67,6 +67,7 @@ Open sider.ini, and add the following line (if not already done)
 
 {" "}
 
+{" "}
 <pre>
   <code>
     <span class="text-white">cpk.root = ".\livecpk\faces"</span>
@@ -84,6 +85,7 @@ Use the "DpFileList Generator" tool to add the created CPK file into your game
 
 {" "}
 
+{" "}
 <div class="aspect-video relative">
   <iframe
     class="absolute w-full h-full"
@@ -99,12 +101,14 @@ Use the "DpFileList Generator" tool to add the created CPK file into your game
 
 {/* ad unit article */}
 
+{" "}
 <script
   async
   src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3982586798741178"
   crossorigin="anonymous"
 ></script>
 
+{" "}
 <ins
   class="adsbygoogle"
   style="display:block; text-align:center;"
@@ -120,6 +124,7 @@ Use the "DpFileList Generator" tool to add the created CPK file into your game
 
 {" "}
 
+{" "}
 <div className="flex flex-wrap gap-2">
   <LinkButton
     targetNew={true}
@@ -152,8 +157,7 @@ Use the "DpFileList Generator" tool to add the created CPK file into your game
   </LinkButton>
 </div>
 **Donating to Halobaim is one way to support his works:** <br />
-[PAYPAL](http://paypal.me/halobaim) or [BUY HIM A
-COFFEE](http://buymeacoffee.com/halobaim)
+[PAYPAL](http://paypal.me/halobaim) or [BUY HIM A COFFEE](http://buymeacoffee.com/halobaim)
 
 ### Credits
 
@@ -162,5 +166,5 @@ COFFEE](http://buymeacoffee.com/halobaim)
 - @MJTS-140914 for amazing face/hair modifier tools.
 - And very big thank you to Mr. @Fleishman for the amazing tutorial and always helping me on making this faces.
 - Fikhai Sports for video tutorial
-  </div>
+    </div>
 {/* CONTENT */}
