--- a/src/content/blog/premier-league-facepak-v2--pes-2021-by-halobaim.mdx
+++ b/src/content/blog/premier-league-facepak-v2--pes-2021-by-halobaim.mdx
@@ -68,6 +68,7 @@ Open sider.ini, and add the following line (if not already done)
 {" "}
 
 {" "}
+
 <pre>
   <code>
     <span class="text-white">cpk.root = ".\livecpk\faces"</span>
@@ -86,6 +87,7 @@ Use the "DpFileList Generator" tool to add the created CPK file into your game
 {" "}
 
 {" "}
+
 <div class="aspect-video relative">
   <iframe
     class="absolute w-full h-full"
@@ -102,6 +104,7 @@ Use the "DpFileList Generator" tool to add the created CPK file into your game
 {/* ad unit article */}
 
 {" "}
+
 <script
   async
   src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3982586798741178"
@@ -109,6 +112,7 @@ Use the "DpFileList Generator" tool to add the created CPK file into your game
 ></script>
 
 {" "}
+
 <ins
   class="adsbygoogle"
   style="display:block; text-align:center;"
@@ -125,6 +129,7 @@ Use the "DpFileList Generator" tool to add the created CPK file into your game
 {" "}
 
 {" "}
+
 <div className="flex flex-wrap gap-2">
   <LinkButton
     targetNew={true}
@@ -157,7 +162,8 @@ Use the "DpFileList Generator" tool to add the created CPK file into your game
   </LinkButton>
 </div>
 **Donating to Halobaim is one way to support his works:** <br />
-[PAYPAL](http://paypal.me/halobaim) or [BUY HIM A COFFEE](http://buymeacoffee.com/halobaim)
+[PAYPAL](http://paypal.me/halobaim) or [BUY HIM A
+COFFEE](http://buymeacoffee.com/halobaim)
 
 ### Credits
 
@@ -166,5 +172,6 @@ Use the "DpFileList Generator" tool to add the created CPK file into your game
 - @MJTS-140914 for amazing face/hair modifier tools.
 - And very big thank you to Mr. @Fleishman for the amazing tutorial and always helping me on making this faces.
 - Fikhai Sports for video tutorial
-    </div>
+
+</div>
 {/* CONTENT */}
