--- a/src/content/blog/football-life-24---real-life-simulation-winter-transfer-updated-aio.mdx
+++ b/src/content/blog/football-life-24---real-life-simulation-winter-transfer-updated-aio.mdx
@@ -3,7 +3,7 @@ author: fdseven
 pubDatetime: 2024-02-06T05:49:27.889Z
 title: Football Life 24 - Real Life Simulation Winter Transfer updated AIO
 postSlug: football-life-24-real-life-simulation-winter-transfer-updated-aio
-featured: true
+featured: false
 draft: false
 tags:
   - downloads
