--- a/src/content/blog/high-quality-olympique-lyonnais-and-leipzig-kits-by-bm-kits.mdx
+++ b/src/content/blog/high-quality-olympique-lyonnais-and-leipzig-kits-by-bm-kits.mdx
@@ -3,7 +3,7 @@ author: fdseven
 pubDatetime: 2024-02-20T05:49:48.777Z
 title: High Quality Olympique Lyonnais and Leipzig Kits by BM Kits
 postSlug: high-quality-olympique-lyonnais-leipzig-kits-bm-kits
-featured: false
+featured: true
 draft: false
 tags:
   - downloads
@@ -45,6 +45,7 @@ import LinkButton from "@components/LinkButton.astro";
   ## These are the new released kits (kit server) PES 2021 from Olympique Lyonnais and Leipzig
 
 {" "}
+
 <hr />
 
 ### Previews
@@ -54,6 +55,7 @@ import LinkButton from "@components/LinkButton.astro";
 {" "}
 
 {" "}
+
 <Modal
   modalId="k1"
   title="Olympique Lyonnais"
@@ -71,6 +73,7 @@ import LinkButton from "@components/LinkButton.astro";
 {" "}
 
 {" "}
+
 <Modal
   modalId="k2"
   title="Olympique Lyonnais Coupe de France"
@@ -88,6 +91,7 @@ import LinkButton from "@components/LinkButton.astro";
 {" "}
 
 {" "}
+
 <Modal
   modalId="k3"
   title="RB Leipzig 4th"
