--- a/src/content/blog/high-quality-olympique-lyonnais-and-leipzig-kits-by-bm-kits.mdx
+++ b/src/content/blog/high-quality-olympique-lyonnais-and-leipzig-kits-by-bm-kits.mdx
@@ -3,7 +3,7 @@ author: fdseven
 pubDatetime: 2024-02-20T05:49:48.777Z
 title: High Quality Olympique Lyonnais and Leipzig Kits by BM Kits
 postSlug: high-quality-olympique-lyonnais-leipzig-kits-bm-kits
-featured: true
+featured: false
 draft: false
 tags:
   - downloads
