--- a/src/content/blog/new-v2-scoreboard-premier-league-2023-pes-2021.mdx
+++ b/src/content/blog/new-v2-scoreboard-premier-league-2023-pes-2021.mdx
@@ -165,6 +165,7 @@ CODE : <br />
 17, England\EPL\PL23-V2-dazn
 17, England\EPL\PL23-V2-directv
 17, England\EPL\PL23-V2-cbssports
+17, England\EPL\PL23-V2-tntsports
 17, England\EPL\PL23-V2-no logo
 ```
 
