--- a/src/content/blog/uefa-euro-2024-special-competition-patch-by-gustistereo.mdx
+++ b/src/content/blog/uefa-euro-2024-special-competition-patch-by-gustistereo.mdx
@@ -47,6 +47,7 @@ import LinkButton from "@components/LinkButton.astro";
   ## This is an awesome special competition patch for upcoming UEFA Euro 2024 by GustiStereo
 
 {" "}
+
 <hr />
 
 ### From GustiStereo
@@ -69,6 +70,7 @@ So far I have replaced/made/customized the following items:
 ### Previews
 
 {" "}
+
 <Modal
   modalId="k0"
   title="Group Stage"
@@ -82,6 +84,7 @@ So far I have replaced/made/customized the following items:
 </Modal>
 
 {" "}
+
 <Modal
   modalId="k01"
   title="Match"
@@ -95,6 +98,7 @@ So far I have replaced/made/customized the following items:
 </Modal>
 
 {" "}
+
 <Modal
   modalId="k02"
   title="Starting Lineup"
@@ -108,6 +112,7 @@ So far I have replaced/made/customized the following items:
 </Modal>
 
 {" "}
+
 <Modal
   modalId="k1"
   title="Subs Board"
@@ -121,6 +126,7 @@ So far I have replaced/made/customized the following items:
 </Modal>
 
 {" "}
+
 <Modal
   modalId="k2"
   title="Substitutions Card"
@@ -134,6 +140,7 @@ So far I have replaced/made/customized the following items:
 </Modal>
 
 {" "}
+
 <Modal
   modalId="k3"
   title="Badges"
@@ -147,6 +154,7 @@ So far I have replaced/made/customized the following items:
 </Modal>
 
 {" "}
+
 <Modal
   modalId="k4"
   title="Competitions Entry"
@@ -160,6 +168,7 @@ So far I have replaced/made/customized the following items:
 </Modal>
 
 {" "}
+
 <Modal
   modalId="k5"
   title="Match Card"
@@ -173,6 +182,7 @@ So far I have replaced/made/customized the following items:
 </Modal>
 
 {" "}
+
 <Modal
   modalId="k6"
   title="Competitions Entry"
@@ -186,6 +196,7 @@ So far I have replaced/made/customized the following items:
 </Modal>
 
 {" "}
+
 <Modal
   modalId="k7"
   title="Formation"
@@ -199,6 +210,7 @@ So far I have replaced/made/customized the following items:
 </Modal>
 
 {" "}
+
 <div class="aspect-video relative">
   <iframe
     class="absolute w-full h-full"
@@ -224,6 +236,7 @@ It includes 2 (two) subfolders:
 Then, add the following line to sider.ini to enable livecpk folder for the Euro
 
 {" "}
+
 <pre>
   <code>
     <span class="text-white">cpk.root = ".\livecpk\Euro"</span>
@@ -270,7 +283,7 @@ In the case you are not using any ball server, then the official match ball for 
 
     <LinkButton
       targetNew={true}
-      title="Add-On (databse)"
+      title="Add-On (database)"
       href="https://mega.nz/file/6hcVkZ5R#mZVBrtgZ-cuFfteRDzj_lYajhQJjpf2AIPxo_efkAJg"
       className="flex items-center [&>p]:!m-0 px-4 !text-skin-inverted [&>p]:!text-skin-inverted [&>p>svg]:text-skin-inverted bg-skin-accent rounded-full !decoration-transparent border border-skin-accent transition duration-500"
     >
@@ -293,7 +306,7 @@ In the case you are not using any ball server, then the official match ball for 
           ></path>
         </g>
       </svg>
-      <p>Add-On (databse)</p>
+      <p>Add-On (database)</p>
     </LinkButton>
 
     <LinkButton
