--- a/src/content/blog/evoweb-patch-version-3.0-euro-2024-update-released.mdx
+++ b/src/content/blog/evoweb-patch-version-3.0-euro-2024-update-released.mdx
@@ -3,7 +3,7 @@ author: fdseven
 pubDatetime: 2024-06-17T16:01:35.525Z
 title: Evoweb Patch Version 3.0 Euro 2024 Update Released
 postSlug: evoweb-patch-version-3-0-euro-2024-update-released
-featured: true
+featured: false
 draft: false
 tags:
   - downloads
