--- a/src/content/blog/liverpool-24-25-home-kit-leaked-ready-for-kitserver-pes-2021.mdx
+++ b/src/content/blog/liverpool-24-25-home-kit-leaked-ready-for-kitserver-pes-2021.mdx
@@ -3,8 +3,8 @@ author: fdseven
 pubDatetime: 2024-07-17T14:25:33.535Z
 title: Liverpool Home Kit 24-25 Official for PES 2021 by fdseven
 postSlug: liverpool-24-25-home-kit-leaked-ready-kitserver-pes-2021
-featured: true
-draft: false
+featured: false
+draft: true
 tags:
   - Kit
   - Kit Server
