--- a/src/content/blog/serie-a-facepack-v6-pes-2021-by-halobaim.mdx
+++ b/src/content/blog/serie-a-facepack-v6-pes-2021-by-halobaim.mdx
@@ -3,7 +3,7 @@ author: fdseven
 pubDatetime: 2024-08-21T05:02:09.892Z
 title: Serie A Facepack v6 PES 2021 by Halobaim
 postSlug: serie-facepack-v6-pes-2021-halobaim
-featured: false
+featured: true
 draft: false
 tags:
   - Facepack
