UPDATE new post

--- a/src/content/blog/uefa-euro-2024-special-competition-patch-by-gustistereo.mdx
+++ b/src/content/blog/uefa-euro-2024-special-competition-patch-by-gustistereo.mdx
@@ -3,7 +3,7 @@ author: fdseven
 pubDatetime: 2024-02-22T07:44:07.040Z
 title: PES 2021 UEFA Euro 2024 Special Competition Patch by GustiStereo
 postSlug: pes-2021-uefa-euro-2024-special-competition-patch-gustistereo
-featured: true
+featured: false
 draft: false
 tags:
   - downloads
