--- a/src/content/blog/player-dynamic-visual-mod.mdx
+++ b/src/content/blog/player-dynamic-visual-mod.mdx
@@ -6,7 +6,7 @@ postSlug: player-dynamic-visual-mod
 featured: true
 draft: false
 tags: []
-description: post description
+description: "Present to you, the Player Dynamic Visual mod by minhanh158. New Global Model: slimmer body, more natural shoulder, realistic grip sox texture, etc"
 type: ""
 youtubeVideoId: fX0qOiMxcWE
 lastmod: null
@@ -58,6 +58,7 @@ import LinkButton from "@components/LinkButton.astro";
   ## Present to you, the Player Dynamic Visual mod by minhanh158
 
 {" "}
+
 <hr />
 
 ### WHAT'S IN IT
@@ -147,6 +148,7 @@ and rename it to 133301.
 4. You can add other special models (made by other modders) to the mod, but make sure to understand what you’re doing, and do it at your own risk. I couldn’t help you with any kind of error you may have if you add any other model that is not included in my mod.
 
 {" "}
+
 <hr />
 
 **EDIT:** Something happened when I set up the .rar file that makes everything in Short_Shorter folder goes away. Please download this and put it in livecpk\Add-On\New Model_Special: Short_Shorter
@@ -167,6 +169,7 @@ That's it. I hope this little effort of mine would bring some more realism to th
 ### DOWNLOADS
 
 {" "}
+
 <div className="flex flex-wrap gap-2">
   <LinkButton
     targetNew={true}
