--- a/src/content/blog/euro-2024-scoreboard-sider-version-base-from-gustistereo.mdx
+++ b/src/content/blog/euro-2024-scoreboard-sider-version-base-from-gustistereo.mdx
@@ -3,7 +3,7 @@ author: fdseven
 pubDatetime: 2024-04-27T13:36:57.692Z
 title: PES 2021 Euro 2024 Scoreboard Sider Version base from GustiStereo
 postSlug: euro-2024-scoreboard-sider-version-base-gustistereo
-featured: true
+featured: false
 draft: false
 tags:
   - downloads
